[gd_scene load_steps=20 format=3 uid="uid://bs1jsgcfbqxsd"]

[ext_resource type="Script" uid="uid://dc262svgjrkrm" path="res://Scenes/Entities/crow.gd" id="1_c25kj"]
[ext_resource type="PackedScene" uid="uid://cf4duabfcn6fa" path="res://Scenes/Components/hit_flash_component.tscn" id="1_lou7a"]
[ext_resource type="PackedScene" uid="uid://bml8o3fl7yfw0" path="res://Scenes/Components/health_component.tscn" id="2_chaky"]
[ext_resource type="PackedScene" uid="uid://cdnmaw550r223" path="res://Scenes/UI/hp_bar.tscn" id="3_c25kj"]
[ext_resource type="Shader" uid="uid://7i1wxshtsd8b" path="res://Resources/Shaders/hit_flash.tres" id="4_6y3jp"]
[ext_resource type="Texture2D" uid="uid://dtk8fcdwol0ed" path="res://Sprites/Characters/Enemies/crow-all.png" id="5_nuoyh"]
[ext_resource type="PackedScene" uid="uid://mca7y2rl04ft" path="res://Scenes/Components/hit_box_component.tscn" id="6_4s38x"]
[ext_resource type="PackedScene" uid="uid://bb8nlyevsjr62" path="res://Scenes/Components/attack_component.tscn" id="7_mpace"]
[ext_resource type="Texture2D" uid="uid://d0bbjhesy6lg4" path="res://Sprites/Effects/enemy-death.png" id="9_6y3jp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_okm6x"]
radius = 16.0
height = 33.830845

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ppp0m"]
resource_local_to_scene = true
shader = ExtResource("4_6y3jp")
shader_parameter/enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_22he3"]
radius = 17.507141

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxqts"]
radius = 9.5
height = 27.0

[sub_resource type="Animation" id="Animation_4s38x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_nuoyh")]
}

[sub_resource type="Animation" id="Animation_mpace"]
resource_name = "attack"
length = 0.500025
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_nuoyh")]
}

[sub_resource type="Animation" id="Animation_nuoyh"]
resource_name = "death"
length = 0.60001004
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_6y3jp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_fatuv"]
resource_name = "idle"
length = 3.00005
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_nuoyh")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfe2d"]
_data = {
&"RESET": SubResource("Animation_4s38x"),
&"attack": SubResource("Animation_mpace"),
&"death": SubResource("Animation_nuoyh"),
&"idle": SubResource("Animation_fatuv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c25kj"]
radius = 300.0

[node name="Crow" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_c25kj")

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5707964
scale = Vector2(1, 1.005)
shape = SubResource("CapsuleShape2D_okm6x")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("sprite", "healthComponent") instance=ExtResource("1_lou7a")]
sprite = NodePath("../Sprite2D")
healthComponent = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("hp_bar") instance=ExtResource("2_chaky")]
position = Vector2(0, -16)
MAX_HEALTH = 15.0
hp_bar = NodePath("HPBar")

[node name="HPBar" parent="HealthComponent" instance=ExtResource("3_c25kj")]
offset_top = -8.0
offset_bottom = -8.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ppp0m")
texture = ExtResource("5_nuoyh")
hframes = 3
vframes = 3

[node name="HitBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_4s38x")]
collision_layer = 8
collision_mask = 0
health_component = NodePath("../HealthComponent")
invincibility_time = 0.2

[node name="HitBox" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_22he3")
debug_color = Color(0.25649512, 0.6281854, 0.2717998, 0.41960785)

[node name="AttackComponent" parent="." instance=ExtResource("7_mpace")]
collision_layer = 0
collision_mask = 2
ATTACK_DAMAGE = 15.0

[node name="AttackCollision" type="CollisionShape2D" parent="AttackComponent"]
position = Vector2(0.5, 0.5)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_oxqts")
debug_color = Color(0.9382652, 0.11452209, 0.55225664, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sfe2d")
}
autoplay = "idle"

[node name="PlayerFinderArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PlayerFinderCollision" type="CollisionShape2D" parent="PlayerFinderArea"]
visible = false
shape = SubResource("CircleShape2D_c25kj")

[node name="PlayerLoseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PlayerLoseCollision" type="CollisionShape2D" parent="PlayerLoseArea"]
visible = false
shape = SubResource("CircleShape2D_c25kj")

[node name="DebugDirection" type="RayCast2D" parent="."]

[connection signal="hp_changed" from="HealthComponent" to="." method="_on_health_component_hp_changed"]
[connection signal="area_entered" from="PlayerFinderArea" to="." method="_on_player_finder_area_entered"]
[connection signal="area_exited" from="PlayerLoseArea" to="." method="_on_player_finder_area_exited"]
